<resources>
    <string name="app_name">FLY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flights">My Flights</string>
    <string name="map">Discover Map</string>
    <string name="airlines">Airlines</string>
    <string name="wlcm">Welcome!</string>
    <string name="From">From</string>
    <string name="to">To</string>
    <string name="departure">Departure Date</string>
    <string name="arrival">Arrival Date</string>
    <string name="travelClass">Travel Class</string>
    <string name="nb">ID</string>
    <string name="def_from">From:</string>
    <string name="def_to">To:</string>
    <string name="def_dep">Departure:</string>
    <string name="def_arr">Arrival:</string>
    <string name="def_tclass">Travel Class:</string>
    <string name="def_id">ID:</string>
    <string name="show">Show Flights</string>
    <string name="FLIGHT_FROM">FLIGHT FROM</string>
    <string name="City_or_Airport">City or Airport</string>
    <string name="FLYING_TO">FLYING TO</string>
    <string name="DEPARTING">DEPARTING</string>
    <string name="RETURNING">RETURNING</string>
    <string name="TRAVEL_CLASS">TRAVEL CLASS</string>
    <string name="Welcome_Abroad">Welcome Abroad!</string>
    <string name="SAVE">SAVE</string>

    <string name="title">Select your budget below</string>
    <string name="budget">Select Budget</string>
    <string name="fragment_title">Flights that correspond to your budget:</string>
    <string name="from">From:</string>
    <string name="cost">Cost:</string>
    <string name="paris">Paris</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="beirut">Beirut</string>
    <string name="antalya">Antalya</string>
    <string name="dallas">Dallas</string>
    <string name="cozumel">Cozumel</string>
    <string name="madrid">Madrid</string>
    <string name="brussels">Brussels</string>
    <string name="_220">220$</string>
    <string name="book">Book</string>
    <string name="_240">240$</string>
    <string name="_48">48$</string>
    <string name="_68">68$</string>
    <string name="_480">480$</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="_600">600$</string>
    <string name="Travel_Budget1">Low Budgets</string>
    <string name="Travel_Budget2">Medium Budgets</string>
    <string name="Travel_Budget3"> High Budgets</string>

    <string-array name="spinner_values">
        <item>Economy</item>
        <item>Business</item>
    </string-array>

</resources>