<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/bluee">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/plane"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_airplanemode_active_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/plane"
            android:layout_toEndOf="@id/plane"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">


            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/def_id"
                android:text="@string/def_id"
                android:textSize="15dp"
                android:textColor="@color/white"/>-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/def_from"
                android:text="@string/def_from"
                android:textSize="15dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/def_to"
                android:text="@string/def_to"
                android:textSize="15dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/def_dep"
                android:text="@string/def_dep"
                android:textSize="15dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/def_arr"
                android:text="@string/def_arr"
                android:textSize="15dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/def_tclass"
                android:text="@string/def_tclass"
                android:textSize="15dp"
                android:textColor="@color/white"/>


        </LinearLayout>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/editbtn"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/edit_foreground"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>



    </RelativeLayout>



</androidx.cardview.widget.CardView>