<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/img_1">


    <TextView
        android:id="@+id/textView"
        android:layout_width="405dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="BOOK YOUR FLIGHT"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="156dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268">

        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/FLIGHT_FROM"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/City_or_Airport"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="155dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267">

        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/FLYING_TO"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/City_or_Airport"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="157dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421">

        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/DEPARTING"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/datePickerButton1"
            android:text="JAN 01 2023"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bluee"
            style="?android:spinnerStyle"
            android:onClick="openDatePicker"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="152dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42">

        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/RETURNING"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/datePickerButton2"
            android:text="JAN 01 2023"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bluee"
            style="?android:spinnerStyle"
            android:onClick="openDatePicker2"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="59dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578">

        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/TRAVEL_CLASS"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="100dp"
            android:layout_height="41dp"
            android:entries="@array/spinner_values" />


    </LinearLayout>

    <Button
        android:id="@+id/Sbutton"
        android:layout_width="408dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/bluee"
        android:text="SAVE"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

</androidx.constraintlayout.widget.ConstraintLayout>